<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <TextView
                    android:text="@string/caption_filter_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/caption_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/date_from_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/date_from_input"
                    android:layout_weight="4" />
                <Button
                    android:id="@+id/btnDateFrom"
                    android:text="@string/select_button"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/date_to_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/date_to_input"
                    android:layout_weight="4" />
                <Button
                    android:id="@+id/btnDateTo"
                    android:text="@string/select_button"
                    android:layout_weight="1" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gps_top_left_lat_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/gps_top_left_lat_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gps_top_left_long_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/gps_top_left_long_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gps_bottom_right_lat_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/gps_bottom_right_lat_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/gps_bottom_right_long_txt"
                    android:layout_weight="1" />
                <EditText
                    android:id="@+id/gps_bottom_right_long_input"
                    android:layout_weight="4"
                    android:layout_span="2" />
            </TableRow>
            <TableRow>
            <Button
                android:id="@+id/btnFilter"
                android:text="@string/filter_apply_button"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnClear"
                android:text="@string/filter_clear_button"
                android:layout_weight="1" />
            <Button
                android:id="@+id/btnCancel"
                android:onClick="cancel"
                android:text="@string/filter_cancel_button"
                android:layout_weight="1" />
        </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
