<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TableRow
                android:gravity="center" >
                <ImageView
                    android:id="@+id/bitmapView"
                    android:src="@mipmap/ic_launcher"
                    android:layout_span="2" />
            </TableRow>
            <TableRow
                android:gravity="center" >
                <EditText
                    android:id="@+id/capView"
                    android:scrollbars="vertical"
                    android:layout_span="2" />
            </TableRow>
            <TableRow
                android:gravity="center" >
                <Button
                    android:id="@+id/btnSave"
                    android:onClick="saveCaption"
                    android:text="@string/save_button"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="40dp"/>

                <Button
                    android:id="@+id/btnCancel"
                    android:onClick="cancel"
                    android:text="@string/cancel_button"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="40dp" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>