...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_weight="10"
        android:columnWidth="110dp"
...
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:onClick="openFilterActivity"
            android:text="@string/filter_button"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btnCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cap_button"
            android:layout_weight="1"/>
    </LinearLayout>
...
